--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 <div id="mainDiv">
 	<div id="content">
 		<div id="code">
-			<span class="space"/><span class="comments">遇上一个人要一分钟的时间，喜欢一个人只需一小时的时间，爱上一个人要一天的时间，可要我忘记你却要用上一生的时间。</span><br />
-			<span class="space"/><span class="comments">七年之久，我多希望能够照顾你。虽然你一直没有同意。</span><br />
-			<span class="space"/><span class="comments">我知道我没有别人那样帅气与完美，可是我还是想努力，努力的让你接受我！
-			在爱情的世界里，我一无所有，也一无所知。在情感的小站里，我愿你是最后的来客，也是永远的主人。我愿伴着你宠着你。一生一世！</span><br />
-			<span class="space"/><span class="comments">希望我们在一起，我会努力的让你做世界第二幸福的人。</span><br />
-			<span class="space"/><span class="comments">当然第一幸福的人是我，因为有你在，嘿嘿。</span><br />
-			<span class="space"/><span class="comments">前面的路我没能陪你一起走，但愿后面的路，能陪你走完的人是我。给我一个照顾你的机会，好吗？</span><br />
-			<span class="space"/><span class="comments">你可能会认为这只是客套话，或者几段文字而已，但是我会在以后证明于你。</span><br />
+			<span class="space"/><span class="comments">遇上一个人要一分钟的时间，喜欢上一个人要一小时的时间，爱上一个人要一天的时间，可要我忘记你却要用上一生的时间。</span><br />
+			<span class="space"/><span class="comments">2017年3月4日，我们第一次香巴拉，见到你的那一刻，我就喜欢上了你。</span><br />
+			<span class="space"/><span class="comments">我向你师兄要你的微信，可是阴差阳错变成了北京小姑娘，我一直以为是你。直到下一次见到你，才知道并不是你！
+			想要认识你，是我那段时间最想做的事情。给我一次机会，我愿伴着你宠着你。一生一世！</span><br />
+			<span class="space"/><span class="comments">给我一次机会，我会努力的让你做世界第二幸福的人。</span><br />
+			<span class="space"/><span class="comments">当然第一幸福的人是我，因为有你在。</span><br />
+			<span class="space"/><span class="comments">前面的路我没能陪你一起走，后面的路，希望能陪你走完的那个人是我。给我一个照顾你的机会，好吗？</span><br />
+			<span class="space"/><span class="comments">你可能会认为这只是一段情话，或者一段文字而已，但是我会在以后证明于你。</span><br />
 			<span class="space"/><span class="comments">女人说男人生下来就会说情话，但从今天开始我的情话只说给你听。</span><br />
 			<span class="space"/><span class="comments">希望你能给我一次机会。<span class="keyword">爱你!</span><br />
 				<span class="placeholder"/><span class="comments">小</span><br />
