--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<span class="space"/><span class="comments">遇上一个人要一分钟的时间，喜欢上一个人要一小时的时间，爱上一个人要一天的时间，可要我忘记你却要用上一生的时间。</span><br />
 			<span class="space"/><span class="comments">2017年3月4日，我们第一次香巴拉，见到你的那一刻，我就喜欢上了你。</span><br />
 			<span class="space"/><span class="comments">我向你师兄要你的微信，可是阴差阳错变成了北京小姑娘，我一直以为是你。直到下一次见到你，才知道并不是你！
-			想要认识你，是我那段时间最想做的事情。给我一次机会吧，我愿用一生陪着你。！</span><br />
+			想要认识你，是我那段时间最想做的事情。给我一次机会吧，我愿用一生陪着你！</span><br />
 			<span class="space"/><span class="comments">给我一次机会吧，我会努力的让你做世界第二幸福的人。</span><br />
 			<span class="space"/><span class="comments">当然第一幸福的人是我，因为有你在。</span><br />
 			<span class="space"/><span class="comments">前面的路我没能陪你一起走，后面的路，希望能陪你走完的那个人是我。给我一个照顾你的机会，好吗？</span><br />
